--- a/ParticleCollisions/proj/cmake/CMakeLists.txt
+++ b/ParticleCollisions/proj/cmake/CMakeLists.txt
@@ -8,7 +8,12 @@ get_filename_component( APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE )
 
 include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 
+set ( SRC_FILES
+		${APP_PATH}/src/ParticleCollisions.cpp
+)
+
 ci_make_app(
-	SOURCES     ${APP_PATH}/src/ParticleCollisions.cpp
+	SOURCES     ${SRC_FILES}
+	INCLUDES    ${APP_PATH}/include
 	CINDER_PATH ${CINDER_PATH}
 )
