--- a/ParticleCollisions/proj/cmake/CMakeLists.txt
+++ b/ParticleCollisions/proj/cmake/CMakeLists.txt
@@ -10,5 +10,6 @@ include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 
 ci_make_app(
 	SOURCES     ${APP_PATH}/src/ParticleCollision.cpp
+	INCLUDE 	${APP_PATH}/include
 	CINDER_PATH ${CINDER_PATH}
 )
