--- a/ParticleCollisions/assets/imgui.ini
+++ b/ParticleCollisions/assets/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Modos]
-Pos=19,18
-Size=109,98
+Pos=500,33
+Size=110,112
+Collapsed=0
+
+[Window][Variables]
+Pos=60,60
+Size=59,58
 Collapsed=0
 
