--- a/ParticleCollisions/assets/imgui.ini
+++ b/ParticleCollisions/assets/imgui.ini
@@ -4,12 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Modos]
-Pos=495,6
-Size=122,133
+Pos=466,20
+Size=137,179
 Collapsed=0
 
 [Window][Variables]
 Pos=60,60
 Size=59,58
+Collapsed=0
+
+[Window][Simualcion de choque]
+Pos=64,53
+Size=177,122
+Collapsed=0
+
+[Window][Parámetros de simulación]
+Pos=424,247
+Size=202,182
+Collapsed=0
+
+[Window][Parámetros]
+Pos=463,214
+Size=156,159
 Collapsed=0
 
